<resources>
    <string name="app_name">Real Estate</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="header">Find your Dream</string>
    <string name="stay">Stay</string>
    <string name="house_name">House name here</string>
    <string name="house_description">Description here</string>
    <string name="house_price">Price here</string>
    <string name="browse_houses">Browse houses</string>
    <string name="category">Cabins and cottages</string>
    <string name="house_type">House Type</string>
    <string name="price_placeholder">200,000 Tsh/ Month</string>
    <string name="address_placeholder">Street, City, Country</string>
    <string name="bed_placeholder">2 beds</string>
    <string name="size_placeholder">1560 sqft</string>
    <string name="bath_placeholder">1 Bath</string>
    <string name="description_placeholder">Are you looking for family friendly neighborhood with great neighbors, large lot with a creek that runs through the back. Show More</string>
    <string name="agent_title">Listing Agent</string>
    <string name="name_placeholder">John Doe</string>
    <string name="agent_position">Owner</string>
    <string name="empty_wishList">No saved Items</string>
    <string name="initial_count">0</string>
    <string name="wish_list_title">Wish List</string>
    <string name="search_placeholder">Search</string>
    <string name="add_hosting">Add hosting</string>
    <string name="add_house">Add house</string>
    <string name="book_house">Book house</string>


    <string-array name="house_types">
        <item>Apartment</item>
        <item>House</item>
        <item>Secondary Unit</item>
        <item>Unique space</item>
        <item>Bed and breakfast</item>
        <item>Boutique hotel</item>
    </string-array>
</resources>