<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="25dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginVertical="10dp"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/wishList_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/house_5"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/wishList_house_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/house_name"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/wishList_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wishList_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="12dp"
        android:text="@string/house_description"
        app:layout_constraintStart_toEndOf="@+id/wishList_image"
        app:layout_constraintTop_toBottomOf="@+id/wishList_house_name" />

    <TextView
        android:id="@+id/wishList_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/address_placeholder"
        app:layout_constraintStart_toEndOf="@+id/wishList_image"
        app:layout_constraintTop_toBottomOf="@+id/wishList_description" />

    <TextView
        android:id="@+id/wishList_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/price_placeholder"
        android:textColor="@color/orange"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/wishList_image"
        app:layout_constraintTop_toBottomOf="@+id/wishList_location" />


</androidx.constraintlayout.widget.ConstraintLayout>