<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/browse_item"
    android:layout_marginVertical="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout
        android:id="@+id/browse_house_frame"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/add_wishlist"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="#00000000"
                android:elevation="2dp"
                android:scaleType="fitCenter"
                android:src="@drawable/tab_saved_white"
                app:layout_constraintEnd_toEndOf="@+id/browse_house_image"
                app:layout_constraintTop_toTopOf="@+id/browse_house_image"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/browse_house_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="6dp"
                android:scaleType="centerCrop"
                android:src="@drawable/house_1"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/round_outline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="ContentDescription" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

<!--    <ImageView
        android:id="@+id/browse_house_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/home_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:clipToOutline="true"
        android:background="@drawable/round_outline"
        app:layout_constraintCircleRadius="10dp"
        android:scaleType="centerCrop"
        />-->

    <TextView
        android:id="@+id/browse_house_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/house_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/browse_house_frame" />

    <TextView
        android:id="@+id/browse_house_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/house_description"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/browse_house_name" />

    <TextView
        android:id="@+id/browse_house_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/house_price"
        android:textColor="@color/orange"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/browse_house_description" />

</androidx.constraintlayout.widget.ConstraintLayout>
